# furnituredb

./: .gitignore  README.md  analyze_capture.py  capture_network.py  explore.py  pyproject.toml  run_web.py  summarize_raw.py
common/: aria2.py  pacing.py  retry.py  storage.py
db/: connection.py  embed.py  export_embeddings.py  ingest.py  schema.sql
db/embeddings/: __init__.py  provider.py  store.py  text_doc.py
db/normalize/: __init__.py  common.py  homecentre.py  homesrus.py  panhome.py
docs/: db_strategy.md  db_ui_handoff.md
sites/homecentre/: API_NOTES.md  api.py  crawl_categories.py  crawl_rugs.py  crawl_sample.py
sites/homesrus/: API_NOTES.md  api.py  crawl_categories.py  crawl_rugs.py  crawl_sample.py  extract.py
sites/panhome/: API_NOTES.md  api.py  attributes.py  build_attribute_dictionary.py  build_category_map.py  crawl_categories.py  crawl_rugs.py  crawl_sample.py
web/: app.py  db.py  images.py  repo.py  search.py
web/static/: app.js  graph.js  index.html  style.css
