[project]
name = "furnituredb"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "fastapi>=0.137.1",
    "google-genai>=2.8.0",
    "httpx>=0.28.1",
    "playwright>=1.60.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "sqlite-vec>=0.1.9",
    "uvicorn>=0.49.0",
]
